--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,13 @@ textarea.input {
   transition: 0.5s;
 }
 
+.homeImage {
+
+    width: 100%;
+    height: auto;
+    border: 2px;
+}
+
 .input-container.textarea label {
   top: 1rem;
   transform: translateY(0);
