--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,6 +114,12 @@ textarea.input {
   overflow-y: auto;
 }
 
+.hompage2Image{
+    
+    max-width: 100%;
+    max-height: 100%
+}
+
 .input-container label {
   position: absolute;
   top: 50%;
